# ChangeLog for dev-libs/libusb-compat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libusb-compat/ChangeLog,v 1.23 2013/05/21 11:54:04 ssuominen Exp $

*libusb-compat-0.1.5 (21 May 2013)

  21 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libusb-compat-0.1.5.ebuild:
  Version bump.

  27 Apr 2013; Fabian Groffen <grobian@gentoo.org> libusb-compat-0.1.4.ebuild:
  Marked ~{ppc,x64}-macos, ~amd64-linux

  18 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Drop duplication of myself as a maintainer where there is a herd.

  25 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.4.ebuild, -files/libusb-0.1-libusbx.patch:
  Remove now unnecessary patch that was used only for <dev-libs/libusbx-1.0.13.

  21 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.4.ebuild, files/libusb-0.1-libusbx.patch:
  Only apply -libusbx.patch for dev-libs/libusbx < 1.0.13 because upstream has
  different solution in git.

  01 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.4.ebuild:
  Use prune_libtool_files() from eutils.eclass

  01 Jul 2012; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.4.ebuild, +files/libusb-0.1-libusbx.patch:
  Don't redefine usbi_log_level because libusbx is now defining it wrt #423135
  by Jeroen Dekien

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> libusb-compat-0.1.4.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #417135

  28 May 2012; Markus Meier <maekke@gentoo.org> libusb-compat-0.1.4.ebuild:
  arm stable, bug #417135

  24 May 2012; Jeroen Roovers <jer@gentoo.org> libusb-compat-0.1.4.ebuild:
  Stable for HPPA (bug #417135).

  24 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  libusb-compat-0.1.4.ebuild:
  ppc/ppc64 stable wrt #417135

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> libusb-compat-0.1.4.ebuild:
  marked x86 per bug 417135
