@@ -6,16 +6,16 @@ DIST libusb-compat-0.1.4.tar.bz2 242379 SHA256 ed5bdd160c7b01ef767fb931a81b454f4
 DIST libusb-compat-0.1.5.tar.bz2 276769 SHA256 404ef4b6b324be79ac1bfb3d839eac860fbc929e6acb1ef88793a6ea328bc55a SHA512 fe63bd1c65e67588a83ebfdd329025ecf75f33f877fb80dd83eb528df057efb591e010416027f9054294504562299166e8e2811a7681fa1967a03baae9b88857 WHIRLPOOL 2f84934c28980bee9e8ca69d284303cdbaf4cb72cee02108825bd7366bfff7f6365db5ffee8de024eb85dee571eccc47acea6a25d6835f0fefb0ad8a77d05045
 EBUILD libusb-compat-0.1.4.ebuild 1032 SHA256 283e508f7e1181773583484014570971982a39bfc96f2c409be38e9d2262c95d SHA512 99d5253c2b63b16b2a3b8b9873c5e678aab60038fc40c266c809c0a419f9a3dfbab34bb859acdeb00624280e962b6f7005147a68bd3e665adb9aac13530af63f WHIRLPOOL a092775978bafe5d52738a715b8066345f664d9514175d5577e2ac126010a8b7a25e566e86e0f06731f8bf8859c1aad93481d31e96f9cb40abd28e63732eac91
 EBUILD libusb-compat-0.1.5.ebuild 1045 SHA256 df832ebea678d0c0756c80419b34d7439455d3b1b477bd251206ed3213167e61 SHA512 26b724c507ddca19df0256243d6d3342bebdc365259c013ee9dff7590cb1b62ae8e161c6e5eb72c89561735675b99186ab94ed2e7db8d037794e99d0453d5e0e WHIRLPOOL 4641f89b8396af0abed8a67d080d5951df906c31783b3ca31ea1cd0965334ebd84a3a0b42f0ea11e1d99e5df0c807ab00602b0e1591dcdc1eeb6a8533813b391
-MISC ChangeLog 3693 SHA256 ea93d1fa8ee1ab669a5e377a154974c9111e7b1531decd5440e8355c70884ae1 SHA512 e3eca25d08063cc849a1fd039c48be2ad38f0bef426b9efd17d5901c7ce8495e6de015047d62f1faaf179ea60f76dad9638562919d6b3bfc57e35872a7cdbb55 WHIRLPOOL c24158749215b768ad686e5f9c6bd7288b87128216d972d0910a58c9db1ad9d50d5040bb082a48acadbb68478cc9cf4ee805c22647804503f5c81001c70b8dfa
-MISC metadata.xml 165 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a SHA512 3f1bee5d098a4e5874df3af56169397cc3ed526f9c56004b9ccaa4c5cf02d4affd894400b88f50f3c19bf5ba3ae06f3d4d2cfa5c15e97b7d4c33053e5f0f63c5 WHIRLPOOL 070ba3ff0b1ea000c90d8af13cdac14693dc5d9dcc8d8ba89cf9bdbe91196e3cf9e72bd2f01cd5efc1ddab63b83184159298d1ee891bc123107ea6891ad612d2
+MISC ChangeLog 3849 SHA256 74f77a9e18fa1b5ed8a335755df7ae49514255fc4a7112981c6b2229485bb7cc SHA512 bfef20878c78789d3bf1ec6a8cc35349b262ab045b86c833602703c164044bbf8e72e21009caca943441d27592dba3f42f36420145c37308c19b269c25bf5046 WHIRLPOOL 4c14e160d8f5c1a9a25513261d0a4814930ea224043edf4c50a7026eb3d554e8914893714a09ece7a96b7c1d29eb71de54d5d631052ed62821a6ecca0f781860
+MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRm1/+AAoJEEdUh39IaPFNlAwH/3YDpWuXhGP/yjKogebsLZl1
-Kz5ictGhUmTzhpVDrKTp6GrlfWViYhf6epZ4xGm7EuqM7HjDC3S6lcuzTyJUhqk7
-Xt6l92qaavDr1lLb3u6rjZkxc9E6o3vrrT3XW0i+CGgRWDv3aI5CwynxlCFrl9fS
-NDZ9lRxallUmwU2qDSHJiRi38jawGdLkBs5AM3mtx5X593VXBt9bBSgDLvFE021e
-TZBymJ1TVu3FD19TXLbJhWanOfMXRA7+8l13Few3+sajaDFPs8sJaVpLnYvzoOgm
-pK+1h7Hvn9IHrXjisDEph2dF6o2c7rNc8MiT7ZKCh0x0Eeb/sSNdqWL4XCe9c8I=
-=/UmO
+iQEcBAEBCAAGBQJRrp1HAAoJEEdUh39IaPFNIqgH/i56jhpJYmDc652gNWs1aY6b
+X7EcZnNs6dKceMcnllzrjG4VEUUpG6KH36I94082lHgHqWcAXNnKeEfM1vhiToBq
+hfikAboLzpd2pQcTQCtezeKPx8QXUBmGqKcCK/Ho2YxY2szYs5PtFSy9eM1UsTXX
+lRHho/ow1RLJkua8FplBR6FtaVRdOGHEygIx8h3Jgcrp02nSaF6W3YCJL2YqCgs1
+cklVTBv5S/tNjLTtM5J7pVjYbSm7Id9wTP32PBWBnx0EwP1kaEFjaviyzR1pqDiu
+ZOX56sW13dTWV+800IuAh2oXgFDrFmPrm467fjwCTC5P+EE+RgTa5BcALfK1D1Y=
+=A4uM
 -----END PGP SIGNATURE-----
