@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 0.1.12-fbsd.patch 2477 SHA256 21ef0d24c6f64d5aaa50e358a342071d120154425d7d034c1f4efae9f8efc24d SHA512 81e3f5ddabaceac1325dfb6ff2425edc5c15dcf75538c43ca1a5f1caa10ea98c14c2a5436647924db6e4e1afab0e6083ffd493138533e992cde3e314e22587a3 WHIRLPOOL cc64f0ca9233432191b0fea1c0196fa4b84e8c6c907734068c242854254871cc47046d56ad34e41a6ec0a33ba1fe39998f5ea290bd57448534734130cd7aa73d
 AUX libusb-0.1-ansi.patch 4599 SHA256 237920768d4bd84189159e488b0c5c1ecb0e4abea82b1a316b16dacb1016698b SHA512 c8eb8c6e8df12dbf85c17afffa32dcf6f325ead6c9b645c0b3bd9c40437aa267a1b0f953ebc9abcb65fa14d0c35bebddf7fd583cde144eff2d10ebc5d98a0d3b WHIRLPOOL 1d040eb7242851711ce10af3031980692642719a6417048b1a9d6ad591fbcd7997052ad9541982e51396642d9b80e6b3fbad162e349555f1a4be431b03bf0516
 AUX libusb-0.1.12-no-infinite-bulk.patch 807 SHA256 141b8a6f6e4cef3b9e08377cb1d79cb9398f2437894d368d0eca8f1c07848db7 SHA512 fa61a9a46bf571b6ddcaa94fafbd9fd243940cfd580c1802ef4a59cd01a05f8f6b1c9d11d5c72e99dc350ef658962777e539f12cba98ac6fd4d8a4d9614b5597 WHIRLPOOL 23b8dd36f66c66b5cff380616492796434d5bbe7947a43b8d37285a727166733fa2f9965f85f2ff79880e1b88dab7b16ce64d31ce58c5fd1e7c6b0ceea0192d9
@@ -6,5 +9,16 @@ DIST libusb-0.1.12.tar.gz 389343 SHA256 37f6f7d9de74196eb5fc0bbe0aea9b5c939de7f5
 DIST libusb-1.0.9.tar.bz2 421971 SHA256 e920eedc2d06b09606611c99ec7304413c6784cba6e33928e78243d323195f9b SHA512 5eba3e9df2c1db71d685becebebf5b1310ee87e442f97a2553a430fd11655a2d9ce50e4ec2ffd62fe322286b0d6bc9e142ce552effc2466ee50424deba035ee5 WHIRLPOOL 9886cb6660d4530fe199441a8b5b76cb8a00012d69a13a40276bf3b880561eeb31301c186828b6fd08b687e038fac640475ba280473053e252cf23f15ca38372
 EBUILD libusb-0.1.12-r7.ebuild 1548 SHA256 f975cad9ca00c12f99ebe773295c4b591eb2f0dbb4cdb57d88e0497cd596b798 SHA512 00826472c4dfc8318ba36d0738fb0c3b278637ccce2580b2917ba31f283ed3b4803c764eb3e242990d805fd9e2d6f047d2012142c8c9030dd8e1dc75a0782d55 WHIRLPOOL bf0031f3f526c8c7aa35717baba892bcece34af0c80ec499871d595e2a7493b0fa135ffb5f792e42afa5f22c2fcccde8cb6cb6a95995afaf0b81550309f5b679
 EBUILD libusb-1.0.9.ebuild 1000 SHA256 7d016e63df50d581e270756222955f081cfedd5cc968256028897f7b09a56424 SHA512 2d86b3696800aaa0bee43c77d4548d72a4cf005db418acb3e73dfd6acbdaff7ae00d6a6b9ce193336476b2cc0ceb1ff7ddd443f6ab0aef5ea427c143361dd043 WHIRLPOOL 97ec162cfcd567f0b2511a9cec9147ad784f0fa39403e585e6b59dc75ac874708659ba3b66e56b461cdd2edb34be9980997612225f0325e0b0c91bfdcb0dda89
-MISC ChangeLog 18671 SHA256 799be153055f7b2a39bf82cb9bf4c7f8ff0567056029987eeba9a992b07b7660 SHA512 96bb7f45ca85acc557bc4a69de73ad8826ec2f6fc149aa6757277b5e3fcfc4077736f05a6c67a3b0538171ad05e3587d5b2e1f6627afbb0f07ae1868ce395a25 WHIRLPOOL afa213fd65cdc2a582eef763ec2c4e722fd60783d67421427000e8953f8b6e053272879445060489ff85c42de32a94ffc80e97a805f470fac543a52f6f82e3b8
-MISC metadata.xml 165 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a SHA512 3f1bee5d098a4e5874df3af56169397cc3ed526f9c56004b9ccaa4c5cf02d4affd894400b88f50f3c19bf5ba3ae06f3d4d2cfa5c15e97b7d4c33053e5f0f63c5 WHIRLPOOL 070ba3ff0b1ea000c90d8af13cdac14693dc5d9dcc8d8ba89cf9bdbe91196e3cf9e72bd2f01cd5efc1ddab63b83184159298d1ee891bc123107ea6891ad612d2
+MISC ChangeLog 18829 SHA256 16a4642ead434192dac6b23f54262dcdc0e0004df3f213b1397a0de15b20f8f4 SHA512 2a87cee38d1e156a55d229f21911d5e860c186a57f201430f66f10e2592094433145f770117a01da69d40a97e5a3431972c2c8082047120a58894df244783430 WHIRLPOOL e6aefa6818383f937c9b0b5e8f7f230ddbeb5e0ce24306f2f93aade0e44276c055c6772d24543136de9f998dcbd04c18f89792a9d04b25b32cd9aa4b6b9fcaad
+MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRrp0GAAoJEEdUh39IaPFNrBEH/3TwKPVc7ANGnDq0fMUX9wNu
+7apweYtDja0r0t/cMWCnImyM0l87FCp4YE9gb6VljoBTgAOOeadt3I/J+mvqTPg4
+UTRS0zXtt7w63ybG4ZBKDEw/vcVIEjj2jXCs2WVjTOa2vc0PQuvNBTU6tYv56n1b
+zM9vQ5aLCfnZLBc7m0lqCNIesotABVEJ5f+va3OWFpwBs3uD+dIsuMbQmN5JoZId
+W7Tmt0XXrUPE/t70eXiXAJyC983VLW3bzHyRrpqroosbKbSJVuy0Wy3DLXy3JAJc
+OKtSCf65lDrsnPhlvyAYT6uGcHMNSYGH4Tn2QUSO/YbKRmiQpsO9S8dBuX/QRhg=
+=8H0y
+-----END PGP SIGNATURE-----
