@@ -3,16 +3,16 @@ Hash: SHA256
 
 DIST libusbx-1.0.15.tar.bz2 455939 SHA256 bb5ec30e53e007d13c37b4edd929435ac224bb71b8fc08fa37ec9e3e81037963 SHA512 7bead1b6407b294ed4a258a3c4d005601c0195960fda1ca35669e64939eb9b58f82738d021f90e55ab4854dd8c78571eb6a77a4ca37896987b14155d33165a3a WHIRLPOOL 2bd07e15506f72147af10e23250d3bb4fe9cbfaa1d2e5a1d21d1efd2d51cb246244cf45a3693c46a736f8e716ec12ff71107a2ec1bd84876fb0244d7f7af95c4
 EBUILD libusbx-1.0.15.ebuild 1202 SHA256 43763c3d75bb384ea1bdeacdd98b6cfe08cbb17add1e79faf10cbd51afd48ee4 SHA512 ee1776f9caf184a8b0acaff62d5b97c7d58ea1acdf3e179b67735531d3056c6e520eeee6323564eac7a56f98a764c7b1c46f1387835a8c4b087bb28bd6ff533e WHIRLPOOL 317f59833ac00def9c4c5846e56a8adc459299c10f760d529241a1a99682d37ac04afbbc475e039ae53a0125c230e058ad1da3b935837399ee3346def1c6872d
-MISC ChangeLog 1527 SHA256 eaa6a5836699dd0014445ed92444379f6c2aa654ed65ae2d40684cda85e44337 SHA512 315a95a3d72d2495e904ab01b7ea34145a1fbcab38d3ed151db69490c66179e082c97804b8e06d6ba2ea3353a13a2f341cb52722e787bdd5a501f8c8e3331e22 WHIRLPOOL 6d67d4f2e553a1c01cc0c2b7358fb06324c827de79006ee9416fd7a2ae86062853f2a4479f180943319d6e13c9abbfc6350d85d0c0451ac41fa1be5a65e43011
-MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
+MISC ChangeLog 1683 SHA256 09fa5a15810f084d33ed6ff17131bda4d2389e0007e3d51112f93667de5601a4 SHA512 4c014945ea0f05fd7cb621d19e9759bbfdf2c28a98f33e00edbb63ba45385ec7967d49d1d25d48a799e83d78c935f22ae347ee0f698ef34e0c0b43fd45c9c230 WHIRLPOOL bdfcf1f402577e5334fcd398bfad37773431a792e48f8367edd5a083f733d91d1248c215d0318c3e50de20bb932e3dd1879afde6e1d1991207bcab9023829310
+MISC metadata.xml 285 SHA256 8f3e4e1f792ef6a6f383ae0aac1627db7f536ff880da423bca1113cea6d06773 SHA512 10fc61b3654c9aee6e9ba9702cf6630928921d2670248b9e1356d417b205dabc959e3672eda071f5fa734b3a001992cecd514a920b6e37376db943266683e75d WHIRLPOOL e26de64dba56ea85587b9e7348a1be056f78a2e2f9f91ffb5faef242b7ced82496b40fe672b18c33491f40a124161ca47af0e80219ebe39a8b24e86557c36db1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRcOMgAAoJEEdUh39IaPFNLB0H/2OJfX0G/wn6I84TzjOlQCUN
-PDtR77lMSUDpFUDzRvjuILPEX7MD8mPZfSak+tyAsQmEGhCKnOlt+ZG7ESfi/RHq
-qQedsjtjhljhPO2bg//rstJ45E9XS54iOSGtG9ISqC+Qj0oOY1O6mMmeaEMytSrD
-Gu/o/7bXQWNJedYVrIPmcvuLgC1TaW6pGVp7D1WW53PpOxx31CvG+BulhL3kyU9c
-bA/Ma6iymX5kjZEH2KrtJrEVOOX4qIMRfTj9K2g7vPgBJYGnqrllh6CkkGADyNrd
-m6K/ZSoqEZ3M9XR0UPIsSaHF702NL7vL0r4NzWJhkdAKQFrPw1QNSsj4+YuZCtk=
-=/t0r
+iQEcBAEBCAAGBQJRrp16AAoJEEdUh39IaPFNWP0H/1T4cSz9SYqBKQDGV8WTvbXg
+tSZYb3kTDY8eScC6/EKSL6xbxp8iUbtGg6UlCQtqIF5Opz3MUyX4OjMr5CEzwXA8
+nnuXOOWb3YiB5EhoRhWEo1VqgrJAiYoUcrmrEgi7NEt6uBaBZNJBWbaW4cioVj2J
+M9X6NKWzLUiK+n+ZPofCnbsIZhqWQQgSd8Riw+MVFsUBT7ZVIJq+tTUqk77/xdF5
+oy2ZbIo9bjUx0rvPMu8S83Mf/usodn9GB9+bdMI385q71jiqyHHtkLF0WR3eWm4V
+2K/EyRPlj0wczVdXXGUpb1bAvYl0J93nLmSIFbE0Yx9Po7o9Hn2HIIIs/NIniGQ=
+=cKpt
 -----END PGP SIGNATURE-----
